...
                        Text("MRN: \(patient.wrappedValue.medicalRecordNumber)")
                            .font(.caption)
                    }
                }.accessibility(identifier: "patient-\(patient.wrappedValue.id)")
            }
        }
        .accessibility(identifier: "patientList")
    }

    @ViewBuilder
    private func errorSection() -> some View {
        if !errors.isEmpty {
            Section(header: Text("Errors")) {
...
